--- a/app/globals.css
+++ b/app/globals.css
@@ -22,5 +22,41 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+.hover-underline {
+  position: relative;
+  display: inline-block;
+}
+
+.hover-underline::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  display: block;
+  margin-top: 4px;
+  right: 0;
+  background: #60a5fa; 
+  transition: width 0.3s ease;
+  left: auto;
+}
+
+.hover-underline:hover::after {
+  width: 100%;
+  left: 0;
+  right: auto;
+}
+
+.price-tag {
+  font-size: 1rem;   
+  font-weight: 700;     
+  color: #dd1410;       
+  margin-top: 1rem;
+}
+.gallery-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
